kubernetes-deployment/deploy-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ramiz-krypton
spec:
  type: LoadBalancer
  selector:
    app: ramiz-krypton
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
